# densepose-module

./: .gitignore  .readthedocs.yml  CHANGES.rst  README.rst  setup.cfg  tox.ini
.github/workflows/: main.yml
docs/: code.rst  conf.py  description.rst  index.rst  installation.rst  requirements.rst  running.rst  under-the-hood.rst
src/pupil_labs/dense_pose/: __init__.py  __main__.py  get_colors.py  main.py  parser.py  pldp_logger.py  pose.py  test_report.py  vis.py
tests/: test_api.py
