[metadata]
name = pupil_labs_dense_pose
description = A project to remap gaze on a DensePose estimate.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/dense-pose-module
author = Pupil Labs GmbH
author_email = mgg@pupil-labs.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
install_requires =
    Pillow
    av
    detectron2@git+https://github.com/facebookresearch/detectron2.git
    detectron2-densepose@git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose
    numpy
    opencv-python
    pandas
python_requires = >= 3.7, < 3.11
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.entry_points]
console_scripts =
    pl-densepose = pupil_labs.dense_pose.main:main

[options.extras_require]
docs =
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
