[metadata]
name = pupil_labs_dense_pose
description = A project to remap gaze onto a DensePose estimate.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/dense-pose-module
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:	
install_requires =
	torch==2.1.2; sys_platform != "darwin"
	torch==2.0.1; sys_platform == "darwin"
	torchvision==0.15.2
    Pillow
    av
    #detectron2@git+https://github.com/johnnynunez/detectron2.git
    #detectron2-densepose@git+https://github.com/johnnynunez/detectron2@main#subdirectory=projects/DensePose
    numpy
    opencv-python
    pandas
    pupil-labs-dynamic-rim
    rich
    importlib-metadata;python_version<"3.8"
python_requires = >=3.8
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.entry_points]
console_scripts =
    pl-densepose = pupil_labs.dense_pose.__main__:main

[options.extras_require]
docs =
    jaraco.packaging
    rst.linker
    sphinx
	sphinx-toolbox
	furo
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
